--- a/state_of_art.tex
+++ b/state_of_art.tex
@@ -83,4 +83,4 @@ The particular case of people estimation on public transport such as buses is a 
 Handte et al. presented a navigation system for bus passengers that has the ability to seamlessly interconnect bus passengers with the real-world public bus infrastructure. Using the occupancy classes to classify the prediction (low, medium, and high occupancy), they got an exact match accuracy of 61.9\% \cite{handte2016internet}. This work provides an indication of the feasibility of real-time information but accuracy can certainly be improved with the use of machine learning techniques.
 
 Oransirikul and Takada presented a method to predict the number of passengers at the bus stop by capturing Wi-Fi activity. They used a polynomial regression method with six independent variables with a degree of 2 \cite{oransirikul2019practicability}. It works well with an average MAE (Mean Absolute Error) of the prediction of 6, but they did not deal with transmission and analysis of data in real-time.
-Our approach is similar but used machine learning to determine the best polynomial approximation, i.e. the degree and the coefficients, using two variables: trend and seasonality of the number of devices detected.
+The approach proposed in this thesis is similar but used machine learning to determine the best polynomial approximation, i.e. the degree and the coefficients, using two variables: trend and seasonality of the number of devices detected.
