--- a/abstract.tex
+++ b/abstract.tex
@@ -6,7 +6,7 @@
 
 Being able to estimate the number of people in your business, especially in this moment of crisis caused by the spread of COVID-19, represents a great opportunity for companies that have to deal with physical customers, both to offer their customers optimal service both to optimize your resources. The system developed, once adapted to the particular service offered by the company, allows you to optimally manage the demand for your service by providing an accurate estimate of customers at all times. From this information, the management of departments of the activity under analysis can understand when it is necessary to increase the amount of service provided and when it is possible to reduce saving important resources.
 
-Employing your employees to manually count the people requesting the service at all times, think of the case of a bus or a supermarket, would be very frustrating for the employees but above all expensive. After an in-depth study of the current state of the art and of the different technologies developed for this purpose, it was decided that the optimal solution to obtain this information is to exploit the Wi-Fi signals coming from the devices of its customers to estimate their actual number.
+Employing your employees to manually count the people requesting the service at all times, think of the case of a bus or a supermarket, would be very frustrating for the employees but above all expensive. After an in-depth study of the current state of the art and of the different technologies developed for this purpose, it was decided that the optimal solution to obtain this information is to exploit the Wi-Fi packets coming from the devices of its customers to estimate their actual number.
 
 This thesis project was carried out at U-Hopper during my external internship. The work I did was to improve an existing system and be able to make it more versatile and robust, providing real-time data transmission and allowing the system to be adapted to multiple use cases.
 
@@ -14,6 +14,6 @@ I worked a lot on the data collection part, implementing a code on a Raspberry P
 
 Much of the processing that is done on the data to get people estimates has been designed to run on a server. By developing a code for cleaning the collected data I was able to detect the number of devices present at all times in the vicinity of the Raspberry Pi. Subsequently, through a part of machine learning, properly calibrated with the ground truth that I collected manually, i.e. the real number of people, I was able to estimate the number of people present.
 
-In order to connect these two parts I used MQTT communication protocol, versatile and scalable, and I developed the whole part for data transmission with an MQTT client on the Raspberry Pi and another one on the server. Also on the server, in our case the U-Hopper one was used, an MQTT broker was executed to forward the data to the receiver client and a database for the storage of the data received by the Raspberry Pi on which it is then possible to carry out the analysis.
+In order to connect these two parts I used the MQTT communication protocol, versatile and scalable, and I developed the whole part for data transmission with an MQTT client on the Raspberry Pi and another one on the server. Also on the server, in this case the U-Hopper one was used, an MQTT broker was executed to forward the data to the receiver client and a database for the storage of the data received by the Raspberry Pi on which it is then possible to carry out the analysis.
 
-The functioning of this system was initially tested at home, due to the restrictions imposed on people on their personal mobility, and subsequently validated in a place of social interest with a certain dynamism, a Cafe, once the restrictions ceased. The results obtained at the end of processing, adequately compared with manually-collected ground truth, are in line with initial expectations. In conclusion, the system provides a good estimate of the number of people present with a mean absolute error of less than two people. This was possible mainly thanks to a careful calibration of the machine learning model, which was initially developed by U-Hopper's colleagues for another project, which I perfected in order to conduct my analyzes and obtain the desired results.
+The functioning of this system was initially tested at home, due to the restrictions imposed on people on their personal mobility, and subsequently validated in a place of social interest with a certain dynamism, a cafe, once the restrictions ceased. The results obtained at the end of processing, adequately compared with manually-collected ground truth, are in line with initial expectations. In conclusion, the system provides a good estimate of the number of people present with a mean absolute error of less than two people. This was possible mainly thanks to a careful calibration of the machine learning model, which was initially developed by U-Hopper's colleagues for another project, which I perfected in order to conduct my analyzes and obtain the desired results.
