--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -6,15 +6,14 @@
 
 \vspace{4cm}
 
-
-\emph{ Thanks to my parents, who supported me in all my studies. }
+\emph{ Thanks to my parents and my family, who supported me in all my studies. }
 
 \emph{ Special thanks to all my grandparents for all they have done for me during my life path. }
 
 \emph{ Thanks to my girlfriend, who has been by my side during my university career. }
 
-\emph{ Thanks to all my friends, my classmates and my family that have supported me during this three years. }
+\emph{ Thanks to all my friends and classmates, who have supported me during these three years. }
 
-\emph{ Thanks to my supervisors and the owner of the Cafe where I conduced the validation, who made possible this thesis. }
+\emph{ Thanks to my supervisors and the owner of the cafe where I conducted the validation, who made possible this thesis and the validation of the system. }
 
-\emph{ Thanks to all the U-Hopper team for the support and the beautiful internship, although mainly was mainly done from home. }
+\emph{ Thanks to all the U-Hopper team and the other interns for the support and the beautiful internship, although it was mainly done from home. }
