--- a/first_page.tex
+++ b/first_page.tex
@@ -2,37 +2,36 @@
 
 \thispagestyle{empty}
 
-\vspace{1.2 cm} 
+\vspace{1.2 cm}
 
 \begin{center}
   \begin{figure}[h!]
     \centerline{\psfig{file=marchio_unitrento_colore_it_v2.eps,width=0.66\textwidth}}
   \end{figure}
-
-  \vspace{2.2 cm} 
-
+  
+  \vspace{2.2 cm}
+  
   \LARGE{Department of Information Engineering and Computer Science\\}
-
-  \vspace{1.2 cm} 
+  
+  \vspace{1.2 cm}
   \Large{Bachelor's Degree in\\
     Information and Communications Engineering
   }
-
-  \vspace{2.2 cm} 
-  \Large\textsc{Final Dissertation\\} 
-  \vspace{1.2 cm} 
-  \Huge\textsc{Estimation of the number of people\\in a place of interest based on\\Wi-Fi probe request frames\\}
   
-
-  \vspace{2.2 cm} 
+  \vspace{2.2 cm}
+  \Large\textsc{Final Dissertation\\}
+  \vspace{1.2 cm}
+  % \Huge\textsc{Crowd density estimation system\\based on Wi-Fi probe request frames\\}
+  \Huge\textsc{A system for estimating\\crowd density based on\\Wi-Fi probe request frames\\}
+  
+  \vspace{2.2 cm}
   \begin{tabular*}{\textwidth}{ c @{\extracolsep{\fill}} c }
   \Large{Supervisors} & \Large{Student}\\
   \Large{Fabrizio Granelli} & \Large{Samuel Bortolin}\\
   \Large{Daniele Miorandi} & \\
   \end{tabular*}
   
-  \vspace{2.2 cm} 
-
+  \vspace{2.2 cm}
   \Large{Academic year 2019/2020}
   
 \end{center}
