--- a/abstract.tex
+++ b/abstract.tex
@@ -4,7 +4,7 @@
 \addcontentsline{toc}{chapter}{Abstract} % da aggiungere comunque all'indice
 \vspace{0.4 cm} 
 
-Being able to estimate the number of people in your business, especially in this moment of crisis caused by the spread of COVID-19, represents a great opportunity for companies that have to deal with physical customers, both to offer their customers optimal service both to optimize your resources. The system developed, once adapted to the particular service offered by the company, allows you to optimally manage the demand for your service by providing an accurate estimate of customers at all times. From this information, the management of departments of the activity under analysis can understand when it is necessary to increase the amount of service provided and when it is possible to reduce saving important resources.
+Being able of estimating crowd density in your business, especially in this moment of crisis caused by the spread of COVID-19, represents a great opportunity for companies that have to deal with physical customers, both to offer their customers optimal service both to optimize your resources. The system developed, once adapted to the particular service offered by the company, allows you to optimally manage the demand for your service by providing an accurate estimate of customers' density at all times. From this information, the management of departments of the activity under analysis can understand when it is necessary to increase the amount of service provided and when it is possible to reduce saving important resources.
 
 Employing your employees to manually count the people requesting the service at all times, think of the case of a bus or a supermarket, would be very frustrating for the employees but above all expensive. After an in-depth study of the current state of the art and of the different technologies developed for this purpose, it was decided that the optimal solution to obtain this information is to exploit the Wi-Fi packets coming from the devices of its customers to estimate their actual number.
 
