--- a/system_design.tex
+++ b/system_design.tex
@@ -191,7 +191,7 @@ At this point, it is possible to get the number of devices present in the place 
 \end{minipage}
 \end{figure}
 
-Finally, data analysis is performed, as shown in the flowchart in figure~\ref{fig:flowML}. Trend (raising/lowering) and seasonality (repetition of the components) of the number of devices are extracted using a decomposition of the corresponding temporal series. Once these two variables are known, it is possible to apply to them the correct polynomial approximation relating to the current time slot to get the forecast of the people present in the place of interest.
+Finally, data analysis is performed, as shown in the flowchart in figure~\ref{fig:flowML}. Trend (raising/lowering) and seasonality (repetition of the components) of the number of devices are extracted using a decomposition of the corresponding temporal series. Once these two variables are known, it is possible to apply to them the correct polynomial approximation relating to the current time slot to get the estimation of the number of people present in the place of interest.
 
 % \begin{figure}[h]
 % \centering 
