--- a/conclusions.tex
+++ b/conclusions.tex
@@ -11,7 +11,7 @@ This chapter reports the conclusions and summary of the work done. At the end of
 
 Summary of the work done:
 \begin{itemize}
-  \item It is possible to continuously estimate the density of the crowd in a place of interest based on the Wi-Fi probe request frames
+  \item It is possible to continuously estimate the density of the crowd in a place of interest based on the Wi-Fi probe request frames.
   \item Designed and developed a system to do that.
   \item Tested the system in a Cafe and collected 4 weeks of data and manually-annotated ground truth.
 \end{itemize}
