--- a/state_of_art.tex
+++ b/state_of_art.tex
@@ -63,7 +63,7 @@ Nishide filtered the collected data using a combination of RSSI, packet frequenc
 These papers show us the possibility of sending data in real-time and that there is a correlation between the devices obtained from the collected data and the presence of people. Furthermore, they suggest that the use of advanced techniques, such as machine learning, could have a positive impact on accuracy in solving the occupancy problem.
 
 Wang et al. employed the Random Forest method to infer occupant counts using the Wi-Fi connection counts data \cite{wang2019inferring}. The method was tested in a real office building with an average occupancy of 22-27 people and a peak occupancy of 48-74 people, the RMSE (Root Mean Square Error) is four people on the test set. For more than 70\% of estimations, the errors are within two people counts, and for more than 90\% of estimations, the errors are within six people counts.
-This paper confirms that the use of machine learning techniques has a good impact on estimating the number of people but this method does not have a communication system for the transmission of data and results in real-time.
+This paper confirms that the use of machine learning techniques has a good impact on estimating the number of people but this method does not have a communication system for the transmission of data in real-time.
 
 
 \section{Use cases of the Wi-Fi method}
