--- a/system_design.tex
+++ b/system_design.tex
@@ -86,11 +86,11 @@ Instead, if there is a connection with the MQTT broker, the collected data is pu
 \caption{Flowchart representing the connection research logic.}
 \label{fig:flowconnection}
 \end{minipage}
-\ \hspace{2mm} \hspace{3mm} \
+\ \hspace{2mm} \
 \begin{minipage}[b]{8.5cm}
 \centering
 \includegraphics[width=0.75\textwidth]{images/flowstorage}
-\caption{Flowchart representing the stored data publishing logic.}
+\caption{Flowchart representing the stored\\data publishing logic.}
 \label{fig:flowstorage}
 \end{minipage}
 \end{figure}
@@ -179,10 +179,10 @@ At this point, it is possible to get the number of devices present in the place 
 \begin{minipage}[b]{8.5cm}
 \centering
 \includegraphics[width=0.55\textwidth]{images/flowrandom}
-\caption{Flowchart representing the logic of removing random encounters.}
+\caption{Flowchart representing the logic of\\removing random encounters.}
 \label{fig:flowrandom}
 \end{minipage}
-\ \hspace{2mm} \hspace{3mm} \
+\ \hspace{2mm} \
 \begin{minipage}[b]{8.5cm}
 \centering
 \includegraphics[width=0.55\textwidth]{images/flowblacklist}
@@ -211,14 +211,14 @@ Finally, data analysis is performed, as shown in the flowchart in figure~\ref{fi
 \begin{minipage}[b]{8.5cm}
 \centering
 \includegraphics[width=0.3\textwidth]{images/flowML}
-\caption{Flowchart representing the data analysis logic.}
+\caption{Flowchart representing the data\\analysis logic.}
 \label{fig:flowML}
 \end{minipage}
-\ \hspace{2mm} \hspace{3mm} \
+\ \hspace{2mm} \
 \begin{minipage}[b]{8.5cm}
 \centering
 \includegraphics[width=0.3\textwidth]{images/flowtrainML}
-\caption{Flowchart representing the ML training logic.}
+\caption{Flowchart representing the machine\\learning training logic.}
 \label{fig:flowtrainML}
 \end{minipage}
 \end{figure}
