--- a/introduction.tex
+++ b/introduction.tex
@@ -43,7 +43,7 @@ The Thesis Objectives are:
 \end{itemize}
 
 Why Wi-Fi solution?
-High diffusion of Wi-Fi devices, low-cost implementation (use of a Raspberry Pi for data collection), real-time data transmission (using MQTT protocol), user privacy ensured (anonymization of MAC addresses).
+High diffusion of Wi-Fi devices, low-cost implementation (use of a Raspberry Pi for data collection), real-time data transmission (using MQTT protocol), costumer privacy ensured (anonymization of MAC addresses).
 
 What was made?
 I designed and developed a system for this problem that could work in several contexts.
